add content placeholder and time info on file{card,tile}

--- a/src/renderer/scss/all.scss
+++ b/src/renderer/scss/all.scss
@@ -32,3 +32,4 @@
 @import 'component/_item-list.scss';
 @import 'component/_time.scss';
 @import 'component/_icon.scss';
+@import 'component/_placeholder.scss';
